Fix spacing on top container border

--- a/client/src/css/general.css
+++ b/client/src/css/general.css
@@ -2795,7 +2795,7 @@ input.angle-input {
       left: 0;
       width: 14px; }
     #flexbox-preview .container:after {
-      left: 130px;
+      left: 135px;
       right: 0; }
     #flexbox-preview .container .title {
       position: absolute;
