--- a/client/src/css/generators/_flexbox.scss
+++ b/client/src/css/generators/_flexbox.scss
@@ -56,7 +56,7 @@
     }
 
     &:after {
-      left:130px;
+      left:135px;
       right:0;
     }
 
